# baator-world

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
apps/dm_tui/: README.md  TESTING.md  __main__.py  dm_tui.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/dm_tui/dm_tui/: __init__.py
apps/dm_tui/dm_tui/app/: __init__.py  baator_bridge.py  command_router.py
apps/dm_tui/dm_tui/commands/: __init__.py  auto_run_command.py  base.py  base_command.py  decorators.py  help_command.py  load_pack_command.py  quit_command.py  roll_command.py  rule_command.py  rules_command.py  scene_start_command.py  tick_command.py
apps/dm_tui/dm_tui/commands/plugins/: __init__.py  expect.py  help.py  loadpack.py  quit.py  rule.py  rules.py  run.py  scene.py  set.py  status.py  tick.py  verify.py
apps/dm_tui/dm_tui/core/: __init__.py  dice.py
apps/dm_tui/dm_tui/ui/: __init__.py  dm_app.py  dm_tui.css
apps/dm_tui/tests/: conftest.py  test_dice.py
packs/: cyber_core.yaml  mythic_core.yaml  physical_core.yaml
src/: __main__.py
src/baator/: __init__.py
src/baator_core/: __init__.py  entities.py  events.py  ids.py
tests/: test_commands_parsing.py  test_content_loader.py  test_controller_sim_verify.py  test_dice.py  test_dice_events.py  test_engine_integration.py  test_engine_logic.py  test_env_and_turns.py  test_facets.py  test_persistence.py  test_rule_executor.py  test_rule_executor_safety.py  test_rules_engine.py  test_rules_exec.py  test_rules_normalization.py  test_smoke.py
worlds/: demo.json
(+68 files in other folders)
