# pyproject.toml (add to repo root)
[project]
name = "dm-tui"
version = "0.1.0"
description = "Baator DM Console (Textual prototype)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.89,<1"]

[project.scripts]
dm-tui = "dm_tui:main"

[tool.setuptools.packages.find]
where = ["dm_tui"]
